[tool.poetry]
name = "nomem"
version = "0.1.0"
description = ""
authors = ["Marvin Zhang <tikazyq@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-core = "^0.2.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
